fixed blogs not showing & added discount based on API

--- a/src/components/Blog/Item/Item.module.sass
+++ b/src/components/Blog/Item/Item.module.sass
@@ -16,7 +16,7 @@
         .preview
             // box-shadow: 0 0 0 3px $red
             img
-                transform: scale(1.2)
+                transform: scale(1.1)
                 +m
                     transform: scale(1)
 
